--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>webminogue</h1>
-        <p>i just can't get you out of my web</p>
+        <p>i just can't get you out of my web, oh your plug-in is all i think about</p>
     </body>
 </html>
