Added First Website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     </head>
     <body>
         <h1>webminogue</h1>
-        <p>i just can't get you out of my web, oh your plug-in is all i think about</p>
+        <p>
+            i just can't get you out of my web, oh your plug-in is all i think about
+        </p>
+
+        <p>
+            <a href="first_website/index.html">first website</a>
+        </p>
     </body>
 </html>
