--- a/first_website/index.html
+++ b/first_website/index.html
@@ -41,7 +41,7 @@
         <img src="kelly_minogue.jpg" alt="Pop singer Kylie Minogue photographed on a red carpet in the year 2000. She has her hair pulled back in a bun and is wearing an asymmetrical pastel striped shirt">
 
         <p>
-            <a href="webminogue/index.html">back to webminogue</a>
+            <a href="https://iancov.github.io/webminogue/">back to webminogue</a>
         </p>
 
     </body>
