--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         </p>
 
         <p>
-            <a href="first_website/index.html">first website</a>
+            <a href="passion/index.html">screenshot haiku</a>
         </p>
+
+        <img src="kylie.jpg">
+
     </body>
 </html>
