--- a/passion/index.html
+++ b/passion/index.html
@@ -2,11 +2,16 @@
 
 <html>
 
-<title>screenshot haiku</title>
+<head>
+
+    <title>screenshot haiku</title>
+    <link rel="stylesheet" href="main.css">
+
+</head>
 
 <body>
 
-    <h1>screenshot haiku</h1>
+    <h1 class="center">screenshot haiku</h1>
 
     <p>this is a website dedicated to a nameless art form that could be described as screenshot haikus. i will periodically and noncommittally upload interpretive haikus of the various screenshots and images found on my computer. this is intended to be a space of flexiblity and exploration into the joint medium(s) of screenshots and haikus.</p>
 
@@ -15,28 +20,42 @@
         <li><a href="https://en.wikipedia.org/wiki/Screenshot">screenshot</a></li>
         <li><a href="https://en.wikipedia.org/wiki/Haiku">haiku</a></li>
         <li><a href="https://instagram.com/iancovert">my instagram</a></li>
-    <br>
+    </ul>
     <br>
 
     <img src="timo.jpg">
-    <p>my hand on my face</p>
-    <p>reading mysteries perhaps</p>
-    <p>twink in good lighting</p>
+    <p class="center">my hand on my face
+    <br>reading mysteries perhaps
+    <br>twink in good lighting</p>
+
+    <br>
 
     <img src="dj_diva.jpeg">
-    <p>mysterious girl</p>
-    <p>spins good music, but her eyes</p>
-    <p>see what's over there</p>
+    <p class="center">mysterious girl
+    <br>spins good music, but her eyes
+    <br>see what's over there</p>
+
+    <br>
 
     <img src="kendall.jpg">
-    <p>boyband heartthrob stare</p>
-    <p>many men grow old and bald</p>
-    <p>time does not forgive</p>
+    <p class="center">boyband heartthrob stare
+    <br>many men grow old and bald
+    <br>time does not forgive</p>
+
+    <br>
 
     <img src="carrie.jpg">
-    <p>i stare at laptop</p>
-    <p>foot up denotes primal state</p>
-    <p>sacred digital</p>
+    <p class="center">i stare at laptop
+    <br>foot up denotes primal state
+    <br>sacred digital</p>
+
+    <br>
+
+    <p class="center">more coming soon?</p>
+
+    <br>
+
+    <p class="center"><a href="https://iancov.github.io/webminogue/"</a>webminogue</p>
 
 </body>
 
