--- a/index.html
+++ b/index.html
@@ -11,17 +11,22 @@
 
 <body>
 
-    <h1 class="center">webminogue</h1>
+    <h1 class="h1">WEBMINOGUE</h1>
 
     <br>
     
-    <p class="center">i just can't get you out of my web, oh your plug-in is all i think about</p><br>
+    <p class="p1">i just can't get you out of my web, oh your plug-in is all i think about</p><br>
     
-    <p class="center"><a href="passion/index.html">screenshot haiku</a> (passion site)</p>
+    <p class="p1"><a href="passion/index.html">screenshot haiku</a> (passion site)</p>
 
     <br>
 
-    <img src="kylie.jpg">
+    <img src="kylie_headphones.jpg">
+
+    <br>
+    <br>
+
+    <p class="p1">a homepage site by ian covert</p>
 
  </body>
 
