--- a/passion/index.html
+++ b/passion/index.html
@@ -11,51 +11,51 @@
 
 <body>
 
-    <h1 class="center">screenshot haiku</h1>
+    <h1 class="h1">SCREENSHOT HAIKU</h1>
 
-    <p>this is a website dedicated to a nameless art form that could be described as screenshot haikus. i will periodically and noncommittally upload interpretive haikus of the various screenshots and images found on my computer. this is intended to be a space of flexiblity and exploration into the joint medium(s) of screenshots and haikus.</p>
+    <p class="p2">this is a website dedicated to a nameless art form that could be described as screenshot haiku. i will periodically and noncommittally upload interpretive haiku of the various screenshots and images found on my computer. this is intended to be a space of flexiblity and exploration into the joint medium(s) of screenshots and haiku.</p>
 
-    <p>resources</p>
-    <ul>
-        <li><a href="https://en.wikipedia.org/wiki/Screenshot">screenshot</a></li>
-        <li><a href="https://en.wikipedia.org/wiki/Haiku">haiku</a></li>
-        <li><a href="https://instagram.com/iancovert">my instagram</a></li>
+    <p class="p2">resources</p>
+    <ul class="a">
+        <li class="p2"><a href="https://en.wikipedia.org/wiki/Screenshot">screenshot</a></li>
+        <li class="p2"><a href="https://en.wikipedia.org/wiki/Haiku">haiku</a></li>
+        <li class="p2"><a href="https://instagram.com/iancovert">my instagram</a></li>
     </ul>
     <br>
 
     <img src="timo.jpg">
-    <p class="center">my hand on my face
+    <p class="p1">my hand on my face
     <br>reading mysteries perhaps
     <br>twink in good lighting</p>
 
     <br>
 
     <img src="dj_diva.jpeg">
-    <p class="center">mysterious girl
+    <p class="p1">mysterious girl
     <br>spins good music, but her eyes
     <br>see what's over there</p>
 
     <br>
 
     <img src="kendall.jpg">
-    <p class="center">boyband heartthrob stare
+    <p class="p1">boyband heartthrob stare
     <br>many men grow old and bald
     <br>time does not forgive</p>
 
     <br>
 
-    <img src="carrie.jpg">
-    <p class="center">i stare at laptop
+    <img src="carrie_laptop.jpg">
+    <p class="p1">i stare at laptop
     <br>foot up denotes primal state
     <br>sacred digital</p>
 
     <br>
 
-    <p class="center">more coming soon?</p>
+    <p class="p1">more coming soon?</p>
 
     <br>
 
-    <p class="center"><a href="https://iancov.github.io/webminogue/"</a>webminogue</p>
+    <p class="p1"><a href="https://iancov.github.io/webminogue/"</a>webminogue</p>
 
 </body>
 
