--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
     <title>webminogue</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" type="png" href="timo_favicon.png">
 
 </head>
 
