adding passion the reup

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     
     <p class="p1">i just can't get you out of my web, oh your plug-in is all i think about</p><br>
     
-    <p class="p1"><a href="passion/index.html">screenshot haiku</a> (passion site)</p>
+    <p class="p1"><a href="passion/index.html">screenshot haiku</a></p>
+
+    <p class="p1"><a href="passion_the_re_up/">screenshot haiku the re-up</a></p>
 
     <br>
 
