--- a/passion_the_re_up/index.html
+++ b/passion_the_re_up/index.html
@@ -135,8 +135,8 @@
         <img src="bella.jpeg" width="100%">
 
         <p class="haiku">don't dare point that phone
-        <br>at my face until i am
-        <br>mysteriously posed</p>
+        <br>at my face until i'm posed
+        <br>mysteriously</p>
 
     </div>
   
