--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="top2">
 
-            <img src="kylie_headphones.jpg">
+            <img src="kylie_headphones.jpg" class="img">
 
         </div>
 
@@ -48,7 +48,7 @@
        
         <div class="right">
 
-            <p class="p1"><a href="passion_the_re_up/index.html" target="_blank">screenshot haiku</a>
+            <p class="p1"><a href="passion_the_third/index.html" target="_blank">screenshot haiku</a>
             <br>
             walking the track</p>
 
