added day and night to haiku

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
 <body>
 
-<div class="main">
 
+
+<div class="main">
+<div class="night">goodnight</div>
     <div class="top">
 
         <div class="top1">
