--- a/passion_the_third/index.html
+++ b/passion_the_third/index.html
@@ -12,6 +12,12 @@
 
 <body>
 
+    <div class="night">
+        
+        <p class="credit"><a href="../passion_night/index.html">goodnight</a></p>
+    
+    </div>
+
     <div class="main">
 
         <div class="heading">
