--- a/journal_entries/index.html
+++ b/journal_entries/index.html
@@ -19,7 +19,7 @@
         <div class="drawer"><a href="journal_entry_1/index.html"><p class="p1">journal entry 1</p></a></div>
         <div class="drawer"><a href="journal_entry_2/index.html"><p class="p1">journal entry 2</p></a></div>
         <div class="drawer"><a href="journal_entry_3/index.html"><p class="p1">journal entry 3</p></a></div>
-        <div class="drawer"><p class="p1">journal entry 4</p></div>
+        <div class="drawer"><a href="journal_entry_4/index.html"><p class="p1">journal entry 4</p></a></div>
         <div class="drawer"><p class="p1">patience</p></div>
 
     </div>
