--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <p class="p1"><a href="passion_the_third/index.html" target="_blank">screenshot haiku</a>
             <br>
-            <a href="walking_the_track/index.html" target="_blank">walking the track</a></p>
+            <a href="track_walk/index.html" target="_blank">walking the track</a></p>
 
         </div>
 
