add computer tiem and title walking the track pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
             <br>
             <a href="track_walk/index.html" target="_blank">walking the track</a>
             <br>
-            <a href="screensaver/index.html" target="_blank">Human</a></p>
+            <a href="screensaver/index.html" target="_blank">Human</a>
+            <br>
+            <a href="computer_tiem/index.html" target="_blank">computer tiem!</a></p>
 
         </div>
 
