added reading response 7

--- a/journal_entries/index.html
+++ b/journal_entries/index.html
@@ -22,6 +22,7 @@
         <div class="drawer"><a href="journal_entry_4/index.html"><p class="p1">journal entry 4</p></a></div>
         <div class="drawer"><a href="journal_entry_5/index.html"><p class="p1">journal entry 5</p></a></div>
         <div class="drawer"><a href="journal_entry_6/index.html"><p class="p1">journal entry 6</p></a></div>
+        <div class="drawer"><a href="journal_entry_7/index.html"><p class="p1">journal entry 7</p></a></div>
         <div class="drawer"><p class="p1">patience</p></div>
 
     </div>
