created website page and updated journal entries page for clarity

--- a/index.html
+++ b/index.html
@@ -48,13 +48,7 @@
        
         <div class="right">
 
-            <p class="p1"><a href="passion_the_third/index.html" target="_blank">screenshot haiku</a>
-            <br>
-            <a href="track_walk/index.html" target="_blank">walking the track</a>
-            <br>
-            <a href="screensaver/index.html" target="_blank">Human</a>
-            <br>
-            <a href="computer_tiem/index.html" target="_blank">computer tiem!</a></p>
+            <p class="p1"><a href="websites/index.html">websites</a></p>
 
         </div>
 
