--- a/journal_entries/index.html
+++ b/journal_entries/index.html
@@ -16,13 +16,13 @@
 
     <div class="top">
 
-        <div class="drawer"><a href="journal_entry_1/index.html"><p class="p1">journal entry 1</p></a></div>
-        <div class="drawer"><a href="journal_entry_2/index.html"><p class="p1">journal entry 2</p></a></div>
-        <div class="drawer"><a href="journal_entry_3/index.html"><p class="p1">journal entry 3</p></a></div>
-        <div class="drawer"><a href="journal_entry_4/index.html"><p class="p1">journal entry 4</p></a></div>
-        <div class="drawer"><a href="journal_entry_5/index.html"><p class="p1">journal entry 5</p></a></div>
-        <div class="drawer"><a href="journal_entry_6/index.html"><p class="p1">journal entry 6</p></a></div>
-        <div class="drawer"><a href="journal_entry_7/index.html"><p class="p1">journal entry 7</p></a></div>
+        <div class="drawer"><a href="journal_entry_1/index.html"><p class="p1">entry 8/26<em class="p2"> - "My website is a shifting house..."</em></p></a></div>
+        <div class="drawer"><a href="journal_entry_2/index.html"><p class="p1">entry 8/27<em class="p2"> - "A Rant About 'Technology'"</em></p></a></div>
+        <div class="drawer"><a href="journal_entry_3/index.html"><p class="p1">entry 9/2<em class="p2"> - "A Handmade Web"</em></p></a></div>
+        <div class="drawer"><a href="journal_entry_4/index.html"><p class="p1">entry 9/17<em class="p2"> - "Hello, World!"</em></p></a></div>
+        <div class="drawer"><a href="journal_entry_5/index.html"><p class="p1">entry 9/26<em class="p2"> - "A Friend is Writing"</em></p></a></div>
+        <div class="drawer"><a href="journal_entry_6/index.html"><p class="p1">entry 10/15<em class="p2"> - "The Poetry of Tools"</em></p></a></div>
+        <div class="drawer"><a href="journal_entry_7/index.html"><p class="p1">entry 10/22<em class="p2"> - "The Internet's Back-to-the-Land Movement"</em></p></a></div>
         <div class="drawer"><p class="p1">patience</p></div>
 
     </div>
