--- a/websites/index.html
+++ b/websites/index.html
@@ -20,6 +20,7 @@
         <div class="drawer"><a href="../track_walk/index.html"><p class="p1">walking the track</p></a></div>
         <div class="drawer"><a href="../screensaver/index.html"><p class="p1">Human</p></a></div>
         <div class="drawer"><a href="../computer_tiem/index.html"><p class="p1">computer tiem!</p></a></div>
+        <div class="drawer"><a href="../selfie//index.html"><p class="p1">selfie</p></a></div>
 
     </div>
 
