--- a/journal_entries/index.html
+++ b/journal_entries/index.html
@@ -23,6 +23,7 @@
         <div class="drawer"><a href="journal_entry_5/index.html"><p class="p1">entry 9/26<em class="p2"> - "A Friend is Writing"</em></p></a></div>
         <div class="drawer"><a href="journal_entry_6/index.html"><p class="p1">entry 10/15<em class="p2"> - "The Poetry of Tools"</em></p></a></div>
         <div class="drawer"><a href="journal_entry_7/index.html"><p class="p1">entry 10/22<em class="p2"> - "The Internet's Back-to-the-Land Movement"</em></p></a></div>
+        <div class="drawer"><a href="journal_entry_8/index.html"><p class="p1">entry 10/29<em class="p2"> - "The Good Room"</em></p></a></div>
         <div class="drawer"><p class="p1">patience</p></div>
 
     </div>
